refactor: code cleanup and refactoring in InmemoryStorage
- edge cases added for match and match Id
- throw exceptions when edge cases matches
- test added for edge cases
- simplifies the code by directly copying the values of the map